Added add-opens switches to the manifest of jmx-jms-common